@@ -1,3 +1,8 @@
+2006-08-02  Thomas Wood  <thos@gnome.org>
+
+	* engines/crux/src/crux-draw.c: (draw_shadow), (draw_box): Fix RTL
+	combo boxes
+
 2006-08-02 Andrew Johnson <acjgenius@earthlink.net>
 
 	* engines/clearlooks/src/clearlooks_style.c:
